k8s/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      # 1. GHCR Authentication Secret
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: analytics-service
          # 2. GHCR Registry Image URL
          image: ghcr.io/dibesh7381/analyticsservice:latest
          # 3. Always pull fresh image from GHCR on restart
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: microservices
spec:
  selector:
    app: analytics-service
  ports:
    - port: 80
      targetPort: 8084
  type: ClusterIP
