k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: microservices
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      # 🔑 GHCR Authentication Secret (VERY IMPORTANT)
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: auth-service
          image: ghcr.io/dibesh7381/authservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microservices
spec:
  selector:
    app: auth-service
  ports:
    - port: 80
      targetPort: 8081
  type: ClusterIP
