k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: order-service
          image: ghcr.io/dibesh7381/orderservice:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservices
spec:
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 8085
  type: ClusterIP
