k8s/profile-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
    spec:
      # 🔑 GHCR Authentication Secret
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: profile-service
          image: ghcr.io/dibesh7381/profileservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: microservices
spec:
  selector:
    app: profile-service
  ports:
    - port: 80
      targetPort: 8082
  type: ClusterIP
